<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D93637"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imagenLogo"
        android:layout_width="201dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toTopOf="@+id/textoUsuarioRegistro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/loguito" />

    <EditText
        android:id="@+id/textoUsuarioRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="Usuario"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/textoContrasenaRegistro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenLogo" />

    <EditText
        android:id="@+id/textoContrasenaRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="47dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="Contraseña"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/botonIniciarSesion"
        app:layout_constraintEnd_toEndOf="@+id/textoUsuarioRegistro"
        app:layout_constraintTop_toBottomOf="@+id/textoUsuarioRegistro" />

    <Button
        android:id="@+id/botonIniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:onClick="botonIniciarSesion"
        android:text="Empezar"
        app:layout_constraintBottom_toTopOf="@+id/botonIrRegistro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoContrasenaRegistro" />

    <Button
        android:id="@+id/botonIrRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:onClick="botonIrRegistro"
        android:text="Registrarme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonIniciarSesion" />
</androidx.constraintlayout.widget.ConstraintLayout>