<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">


    <EditText
        android:id="@+id/registro_usuario"
        android:layout_width="361dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/text_registro"
        android:ems="10"
        android:hint=" Usuario"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/registro_correo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/registro_correo"
        android:layout_width="361dp"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/text_registro"
        android:ems="10"
        android:hint=" Correo"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/registro_contraseña"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/registro_contraseña"
        android:layout_width="361dp"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/text_registro"
        android:ems="10"
        android:hint=" Contraseña"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/registro_confirmar_contraseña"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/registro_confirmar_contraseña"
        android:layout_width="361dp"
        android:layout_height="48dp"
        android:layout_marginBottom="324dp"
        android:background="@drawable/text_registro"
        android:ems="10"
        android:hint=" Confirmar contraseña"
        android:inputType="text|textPassword"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:layout_width="190dp"
        android:layout_height="82dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registro_confirmar_contraseña"
        app:layout_constraintVertical_bias="0.411">

        <RadioButton
            android:id="@+id/registro_radio_profesor"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:color="#E58963"
            android:text="Profesor"
            android:textCursorDrawable="@android:color/holo_red_light"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/registro_radio_estudiante"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:color="#E58963"
            android:text="Estudiante"
            android:textSize="20sp" />
    </RadioGroup>

    <ToggleButton
        android:id="@+id/terminos_condiciones"
        android:layout_width="35dp"
        android:layout_height="37dp"
        android:layout_marginBottom="144dp"
        android:background="@drawable/text_registro"
        android:textAlignment="viewEnd"
        android:textColor="#E58963"
        android:textOff=" "
        android:textOn="* "
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.678"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="152dp"
        android:text="Acepto Terminos y condiciones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:background="@drawable/fondo_registro"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="133dp"
        android:layout_height="46dp"
        android:text="Registro"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/registro_hecho"
        android:layout_width="93dp"
        android:layout_height="43dp"
        android:background="@drawable/btn_registro_hecho"
        android:text="Hecho"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>